--- a/degree.html
+++ b/degree.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-RESUME</title>
 </head>
-<img src="pictures/header.png" alt="header" width="1300" height="250" style="margin-left: 25px;">
+<img src="/pictures/header.png" alt="header" width="1300" height="250" style="margin-left: 25px;">
 
 <style>
   body {
@@ -185,7 +185,7 @@
 
 </style>
   <div class="zoom2">
-    <img src="pictures/uitm2.jpg" alt="UiTM" width="240px" height="150px">
+    <img src="/pictures/uitm2.jpg" alt="UiTM" width="240px" height="150px">
     </div>
     <div class="education2">
       <p><b>ADDITIONAL INFORMATION</b></p>
