--- a/stpm.html
+++ b/stpm.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-RESUME</title>
 </head>
-<img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+<img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
   body {
-   background-image: url(pictures/gray.jpg);
+   background-image: url(/pictures/gray.jpg);
   }
  </style>
 <style>
@@ -161,14 +161,14 @@
   <p style="text-align: center; font-family: Arial, Helvetica, sans-serif;">However, Covid-19 caused it to be extended to 2 years.</p>
 </div>
 <div class="zoom" style="margin-left: 200px;">
-  <img src="pictures/F6.jpg" alt="Form 6" width="280px" height="380px">
+  <img src="/pictures/F6.jpg" alt="Form 6" width="280px" height="380px">
   
 </div>
 <div class="zoom">
-  <img src="pictures/muet.jpg" alt="Muet" width="280px" height="380px">
+  <img src="/pictures/muet.jpg" alt="Muet" width="280px" height="380px">
 </div>
 <div class="zoom">
-  <img src="pictures/smk.jpg" alt="Sekolah" width="260px" height="380px">
+  <img src="/pictures/smk.jpg" alt="Sekolah" width="260px" height="380px">
 </div>
 </body>
 <style>
