--- a/student.html
+++ b/student.html
@@ -7,10 +7,10 @@
 </head>
 <style>
     body {
-      background-image: url(pictures/gray.jpg);
+      background-image: url(/pictures/gray.jpg);
     }
   </style>
-  <img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+  <img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
       <style>
   body {
     font-family: Arial, Helvetica, sans-serif;
@@ -63,7 +63,7 @@
 </style>
       
       <div class="personal">
-        <img src="pictures/logo.jpg" alt="UiTM" width="400px" height="150px">
+        <img src="/pictures/logo.jpg" alt="UiTM" width="400px" height="150px">
         <p><b>School of Information Science. College of Computing, Informatics and Mathematics</b></p>
         <p><b>Universiti Teknologi MARA Campus Puncak Perdana, Shah Alam</b></p>
         <p><b>Basic Web Design & Content Management (IMS456)</b></p>
