--- a/degree.html
+++ b/degree.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-RESUME</title>
 </head>
-<img src="/pictures/header.png" alt="header" width="1300" height="250" style="margin-left: 25px;">
+<img src="./pictures/header.png" alt="header" width="1300" height="250" style="margin-left: 25px;">
 
 <style>
   body {
-   background-image: url(/pictures/gray.jpg);
+   background-image: url(./pictures/gray.jpg);
   }
   
   body {
@@ -102,7 +102,7 @@
 </div>
 <body>
   <div class="zoom">
-    <img src="pictures/uitm.jpg" alt="Surat" width="180px" height="260px">
+    <img src="/pictures/uitm.jpg" alt="Surat" width="180px" height="260px">
     </div>
   <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center; color: #27384c; padding-top: 10px;">TERTIARY EDUCATION</h1> 
   <style>
@@ -192,7 +192,7 @@
     <p style="line-height: 1.5;">Faculty of Information Management , Universiti Teknologi MARA now known as School of Information Science, College of Computing, Informatics and Mathematics, Universiti Teknologi MARA</p>
     </div>
     <div class="zoom3">
-      <img src="pictures/fakulti.jpg" alt="fakulti" width="240px" height="150px">
+      <img src="/pictures/fakulti.jpg" alt="fakulti" width="240px" height="150px">
     </div>
   </body>
 <style>
