--- a/education.html
+++ b/education.html
@@ -7,10 +7,10 @@
 </head>
 <style>
   body {
-   background-image: url(/pictures/gray.jpg);
+   background-image: url(pictures/gray.jpg);
   }
  </style>
- <img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+ <img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
   body {
     font-family: Arial, Helvetica, sans-serif;
@@ -107,7 +107,7 @@
 }
     </style>
     <div class="zoom">
-<img src="/pictures/sekolah rendah.jpg" alt="Sekolah Rendah" width="250px" height="350px">
+<img src="pictures/sekolah rendah.jpg" alt="Sekolah Rendah" width="250px" height="350px">
 </div>
 <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center; color: #27384c; margin-left: 400px;">EARLY EDUCATION</h1>
 <style>
@@ -159,7 +159,7 @@
   }
    </style>
    <div class="zoom2">
-    <img src="/pictures/sekolah menengah.jpg" alt="Sekolah Menengah" width="250px" height="350px">
+    <img src="pictures/sekolah menengah.jpg" alt="Sekolah Menengah" width="250px" height="350px">
    </div>
   <div class="education2"> 
     <h3><b>SECONDARY SCHOOL</b></h3>
