--- a/skills.html
+++ b/skills.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-RESUME</title>
 </head>
-<img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+<img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
   body {
-   background-image: url(/pictures/gray.jpg);
+   background-image: url(pictures/gray.jpg);
   }
  </style>
 <style>
@@ -186,10 +186,10 @@
       <p>Computer Skills</p>
     </div>
     <div class="zoom">
-      <img src="/pictures/soft.png" alt="soft skills" width="300px" height="300px">
+      <img src="pictures/soft.png" alt="soft skills" width="300px" height="300px">
       </div>
       <div class="zoom2">
-        <img src="/pictures/hard.png" alt="hard skills" width="300px" height="300px">
+        <img src="pictures/hard.png" alt="hard skills" width="300px" height="300px">
         </div>
         <div class="education2">
         <h2><b>LANGUAGE</b></h2>
@@ -198,7 +198,7 @@
       <p>Mandarin</p>
     </div>
     <div class="zoom3">
-      <img src="/pictures/language.png" alt="language" width="250px" height="250px">
+      <img src="pictures/language.png" alt="language" width="250px" height="250px">
       </div>
 </body>
 <style>
