--- a/personaldetails.html
+++ b/personaldetails.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-RESUME</title>
 </head>
-<img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+<img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
  body {
-  background-image: url(/pictures/gray.jpg);
+  background-image: url(pictures/gray.jpg);
  }
 </style>
 <style>
@@ -103,7 +103,7 @@
 </div>
 <body>
 </style>
-<img src="/pictures/formal.png" alt="formal" width="350px" height="350px" style="float: right; margin-right: 90px; margin-top: 80px;">
+<img src="pictures/formal.png" alt="formal" width="350px" height="350px" style="float: right; margin-right: 90px; margin-top: 80px;">
 <header>
   <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: #27384c; text-align: center; margin-left: 90px; ">PERSONAL INFORMATON</h1> 
 </header>
@@ -157,9 +157,9 @@
 
 <div class="personal2">
 <h3>CONTACT ME!</h3>
-<a href="https://www.facebook.com/syah.aj.77?mibextid=ZbWKwL"><img src="/pictures/fb.png" alt="facebook" width="100px" height="100px">
+<a href="https://www.facebook.com/syah.aj.77?mibextid=ZbWKwL"><img src="pictures/fb.png" alt="facebook" width="100px" height="100px">
 <br>
-  <a href="https://www.linkedin.com/in/aisyah-j-6bba772a4/"><img src="/pictures/in.png" alt="linkedin" width="100px" height="100px">
+  <a href="https://www.linkedin.com/in/aisyah-j-6bba772a4/"><img src="pictures/in.png" alt="linkedin" width="100px" height="100px">
 </div>
 </body>
 <br>
