--- a/extracurricular.html
+++ b/extracurricular.html
@@ -7,10 +7,10 @@
 </head>
 <style>
   body {
-    background-image: url(/pictures/gray.jpg);
+    background-image: url(pictures/gray.jpg);
   }
 </style>
-<img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+<img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
     body {
   font-family: Arial, Helvetica, sans-serif;
@@ -118,7 +118,7 @@
  }
      </style>
      <div class="zoom">
- <img src="/pictures/futsal.jpg" alt="futsal" width="320px" height="150px">
+ <img src="pictures/futsal.jpg" alt="futsal" width="320px" height="150px">
  </div>
 
  <style>
@@ -169,7 +169,7 @@
    }
     </style>
     <div class="zoom2">
-     <img src="/pictures/festival.jpg" alt="Festival" width="300px" height="150px">
+     <img src="pictures/festival.jpg" alt="Festival" width="300px" height="150px">
     </div>
    <div class="education2"> 
      <h3><b>FESTIVAL SASTERA DAN SENI KANAK-KANAK NEGERI PERAK</b></h3>
@@ -207,7 +207,7 @@
     }
     </style>
        <div class="zoom3">
-        <img src="/pictures/rumah.jpg" alt="Rumah" width="300px" height="150px">
+        <img src="pictures/rumah.jpg" alt="Rumah" width="300px" height="150px">
       </div>
   <div class="education3"> 
     <h3><b>JALINAN MESRA CAHAYA KASIH BESTARI</b></h3>
