--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
 <img src="/pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
 <style>
   body {
-   background-image: url(/pictures/gray.jpg);
+   background-image: url(pictures/gray.jpg);
   }
  </style>
 <style>
@@ -118,7 +118,7 @@
  }
      </style>
      <div class="zoom">
- <img src="/pictures/catering.jpg" alt="Nur Habib Catering" width="230px" height="230px">
+ <img src="pictures/catering.jpg" alt="Nur Habib Catering" width="230px" height="230px">
  </div>
 
  <style>
@@ -170,7 +170,7 @@
    }
     </style>
     <div class="zoom2">
-     <img src="/pictures/foodstall.jpg" alt="Food Stall" width="300px" height="200px">
+     <img src="pictures/foodstall.jpg" alt="Food Stall" width="300px" height="200px">
     </div>
    <div class="education2"> 
      <h3><b>BAZAAR RAMADHAN</b></h3>
@@ -209,7 +209,7 @@
     }
     </style>
        <div class="zoom3">
-        <img src="/pictures/morrow.jpg" alt="Cafe" width="300px" height="200px">
+        <img src="pictures/morrow.jpg" alt="Cafe" width="300px" height="200px">
       </div>
   <div class="education3"> 
     <h3><b>MORROW CAFE UiTM PUNCAK PERDANA</b></h3>
