--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <style>
   body {
-    background-image: url(pictures/gray.JPG);
+    background-image: url(pictures/gray.jpg);
   }
 </style>
-<img src="pictures/header.PNG" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
+<img src="pictures/header.png" alt="header" width="1300px" height="250px" style="margin-left: 25px;">
     <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -130,7 +130,7 @@ body {
 
 </style>
 <div class="column img"></div>
-    <img src="pictures/profil.PNG" alt="Formal" style="width: 350px; height: 350px; margin-top: 15px;"> 
+    <img src="pictures/profil.png" alt="Formal" style="width: 350px; height: 350px; margin-top: 15px;"> 
 </div>
  
 <div class="column1">
